Fix button alignment on iPad
https://stackoverflow.com/questions/33662519/justify-content-value-of-space-between-not-working-for-ios-chrome-and-safari-bro

--- a/src/GameBoard.css
+++ b/src/GameBoard.css
@@ -66,6 +66,7 @@
   height: 100px;
   direction: ltr;
   display: flex;
+  -webkit-justify-content: center;
   justify-content: center;
   align-items: center;
 }
